--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-    <WebView
+    <im.delight.android.webview.AdvancedWebView
             android:id="@+id/wv_main"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
