--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,12 @@
 <!--?xml version="1.0" encoding="UTF-8"?-->
 <resources>
-  <color name="primaryColor">#dc7734</color>
-  <color name="primaryLightColor">#ffa761</color>
-  <color name="primaryDarkColor">#a54901</color>
-  <color name="primaryTextColor">#000000</color>
+    <color name="primaryColor">#dc7734</color>
+    <color name="primaryLightColor">#ffa761</color>
+    <color name="primaryDarkColor">#a54901</color>
+    <color name="primaryTextColor">#000000</color>
+    <color name="white">#ffffff</color>
+    <color name="app_color">#dc7734</color>
+    <color name="input_edit_background_activated">#dc7734</color>
+    <color name="input_edit_background_default">#D3D3D3</color>
+
 </resources>
