Linked all pages

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,6 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="16dp"
+    android:background="@color/white"
         tools:context=".RegisterActivity">
 
 
@@ -83,7 +84,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:background="@drawable/button_background"
-                android:text="@string/register" />
+            android:text="@string/register"
+            android:textColor="@color/black_to_white" />
 
 
     </LinearLayout>
