--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -12,18 +12,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/button_background"
+        android:textColor="@color/black_to_white"
             android:padding="8dp"
             android:text="Home"
 
             />
 
     <Button
+        android:id="@+id/btn_current_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:background="@drawable/button_background"
             android:padding="8dp"
-            android:text="Settings"
+        android:text="Current Location"
+        android:textColor="@color/black_to_white"
 
             />
 
@@ -33,7 +36,8 @@
             android:layout_marginTop="16dp"
             android:background="@drawable/button_background"
             android:padding="8dp"
-            android:text="Terms and Conditions"
+        android:text="Help"
+        android:textColor="@color/black_to_white"
 
             />
 
