--- a/app/src/main/res/layout/activity_my_location.xml
+++ b/app/src/main/res/layout/activity_my_location.xml
@@ -1,50 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:padding="16dp"
-        tools:context=".MyLocationActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:padding="16dp"
+    tools:context=".MyLocationActivity">
 
     <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="My Location"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+        android:id="@+id/txt_author"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="My Location"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
     <TextView
-            android:id="@+id/txt_current_location_availability"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Checking .."
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:id="@+id/txt_current_location_availability"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Checking .."
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
 
 
-            />
+        />
 
 
     <TextView
-            android:id="@+id/txt_current_location"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Current location .."
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@color/app_color"
+        android:id="@+id/txt_current_location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Current location .."
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="@color/app_color"
 
-            />
+        />
 
     <Button
-            android:id="@+id/btn_current_location"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/button_background"
-            android:padding="16dp"
-            android:text="Get Current Location" />
+        android:id="@+id/btn_current_location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/button_background"
+        android:padding="16dp"
+        android:text="Get Current Location" />
 
 </LinearLayout>
